--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Buscador de Materiales</title>
+  <title>Buscador de Materiales SEM</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f8f9fa; }
+    body { font-family: Aptos Narrow, sans-serif; margin: 40px; background: #f8f9fa; }
     h2 { color: #333; }
     input {
       width: 400px; padding: 10px; margin-bottom: 20px;
       border: 1px solid #ccc; border-radius: 5px;
     }
     button {
-      padding: 10px 20px; background-color: #007BFF; color: white;
+      padding: 10px 20px; background-color: #4CAF50; color: white;
       border: none; border-radius: 5px; cursor: pointer; margin-left: 10px;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #4CAF50;
     }
     table {
       width: 100%; border-collapse: collapse; background: white;
@@ -95,3 +95,4 @@
 
 </body>
 </html>
+
