--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     th, td {
       border: 1px solid #ddd; padding: 8px; text-align: left;
     }
-    th { background: #007BFF; color: white; }
+    th { background: #4CAF50; color: white; }
     tr:hover { background-color: #f1f1f1; }
   </style>
 </head>
@@ -95,4 +95,5 @@
 
 </body>
 </html>
+
 
